Fixed codeblock overflow

--- a/src/components/Post/PostContent/PostContent.module.css
+++ b/src/components/Post/PostContent/PostContent.module.css
@@ -43,6 +43,7 @@
   border-radius: 0.375rem;
   padding: 1rem;
   margin: 1.5rem 0;
+  overflow: auto;
 }
 .markdown code {
   font-family: monospace;
